Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittlePlusWithBadCharacters-9.calc
a .0%e+2 b 1.%e+2 c 2.3%e+3 d 34.5%e+4 e 6.78%e+7 f 99.99%e+5 g 3%e+9 h 76%e+4
